# SEMV

./: .env  .env.example  .gitignore  README.md  constraints.txt  pyproject.toml  pytest.ini  requirements.txt
configs/: default.yaml  evaluation.yaml  memory.yaml  scoring.yaml  tools.yaml
scripts/: aggregate_results.py  check_case_outputs.py  consolidate_memory.py  convert_case.py  evaluate_cosmos.py  evaluate_mv2026.py  evaluate_reports.py  parse_mv2026_gold.py  prepare_cosmos.py  run_benchmark.py  run_case.py  run_protocol.py  seed_memory.py
src/: __init__.py  main.py
tests/: conftest.py  memory_test_utils.py  test_adaptive_rerun.py  test_argument_evidence_ids.py  test_argument_scoring.py  test_artifact_isolation.py  test_asr_extractor.py  test_case_bundle_schema.py  test_check_case_outputs.py  test_claim_decomposition.py  test_claim_scope_rules.py  test_consolidate_memory_cli.py  test_contestation_applier.py  test_contestation_schema.py  test_cosmos_adapter.py  test_cosmos_evaluator.py  test_deep_forensic_backend.py  test_deep_forensic_factory.py  test_deep_researcher_evidence_queries.py  test_forensic_analyzer.py  test_forensic_analyzer_deep.py  test_gdelt_search.py  test_geolocation_candidate_extractor.py  test_geolocation_metrics.py  test_gold_leakage_guard.py  test_legacy_feedback.py  test_lesson_generator.py  test_llm_client_env.py  test_local_reverse_image_search.py  test_markdown_media_analysis_section.py  test_media_manifest_builder.py  test_memory_config.py  test_memory_consolidation.py  test_memory_lifecycle_config.py  test_memory_metrics.py  (+27 more)
(+125 files in other folders)
