[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semv"
version = "0.1.0"
description = "Self-Evolving Multimedia Verification with contestable A-QBAF reasoning"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6.0.1,<7",
  "requests>=2.31,<3",
  "Pillow>=10,<12",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.5,<1"]
media = ["opencv-python-headless>=4.9", "numpy>=1.26", "scenedetect[opencv]>=0.6", "easyocr>=1.7", "faster-whisper>=1.0", "imagehash>=4.3"]
retrieval = ["open-clip-torch>=2.24", "faiss-cpu>=1.8", "beautifulsoup4>=4.12", "trafilatura>=1.8", "duckduckgo-search>=6"]
deep-forensics = ["torch", "torchvision", "transformers", "accelerate", "qwen-vl-utils"]
all = [
  "opencv-python-headless>=4.9", "numpy>=1.26", "scenedetect[opencv]>=0.6",
  "easyocr>=1.7", "faster-whisper>=1.0", "imagehash>=4.3",
  "open-clip-torch>=2.24", "faiss-cpu>=1.8", "beautifulsoup4>=4.12",
  "trafilatura>=1.8", "duckduckgo-search>=6",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["data", "external", ".venv"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402", "F401"]

